# music-app

./: .gitignore  .stylelintrc.json  components.json  eslint.config.js  package.json  prettier.config.js  tailwind-css-plugin.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  Error.tsx  NotFound.tsx  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/atoms/: count-atom.ts  listen-now-atom.ts  musci-player-atom.ts  music-player-atom.ts  user-atom.ts  window-atom.ts  windowAtom.ts
src/components/Layout/: SideFooter.tsx  SideMenu.tsx  Sidebar.tsx  index.tsx
src/components/ModeToggle/: index.tsx
src/components/MusicPlayer/: PlayerControls.tsx  inde.module.css  index.tsx
src/components/SidePanel/: FooterPanel.tsx  LogoPanel.tsx  index.tsx
src/components/TitleBar/: Toolbar.tsx  WindowControls.tsx  index.module.css  index.tsx  toolbar.module.css  window-controls.module.css
src/hooks/: use-listen.ts  useIsClient.ts
src/locales/: en.json  zh.json
src/setup/: i18n.ts
src/styles/: main.css  tailwind-extend.css  tailwind.css
src/typing/: tailwind-css-plugin.d.ts
src/utils/: system.ts
src/views/browse/: index.tsx
src/views/listen-now/: AlbumArtwork.tsx  index.tsx
