[package]
name = "music-app"
version = "1.0.0"
description = "music player"
authors = ["dingdangmaoup"]
license = "MIT"
repository = "https://github.com/DINGDANGMAOUP/music-app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
log = "0.4.22"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-log = "2.0.2"
tauri-plugin-http = "2.0.3"
